--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -3,13 +3,13 @@
         <div class="navbar-header">
             <a href="#" class="navbar-brand"><img src="assets/img/dclogo.png" alt="Динаклининг - уборка с заботой"></a>
             <ul class="navbar-nav navbar-right">
-                <li><a ui-sref="home" ui-sref-active="active">Главная</a></li>
-                <li><a ui-sref="home.services" ui-sref-active="active">Услуги</a></li>
-                <li><a ui-sref="home.clean" ui-sref-active="active">Чистота</a></li>
-                <li><a ui-sref="home.advantages" ui-sref-active="active">Преимущества</a></li>
-                <li><a ui-sref="customers" ui-sref-active="active">Наши заказчики</a></li>
-                <li><a ui-sref="review" ui-sref-active="active">Отзывы</a></li>
-                <li><a ui-sref="order" ui-sref-active="active">Заказать</a></li>
+                <li><a data-ui-sref="home" data-ui-sref-active="active">Главная</a></li>
+                <li><a data-ui-sref="home.services" data-ui-sref-active="active">Услуги</a></li>
+                <li><a data-ui-sref="home.clean" data-ui-sref-active="active">Чистота</a></li>
+                <li><a data-ui-sref="home.advantages" data-ui-sref-active="active">Преимущества</a></li>
+                <li><a data-ui-sref="home.partners" data-ui-sref-active="active">Наши заказчики</a></li>
+                <li><a data-ui-sref="home.review" data-ui-sref-active="active">Отзывы</a></li>
+                <li><a data-ui-sref="order" data-ui-sref-active="active">Заказать</a></li>
             </ul>
         </div>
 
@@ -60,18 +60,127 @@
     <h2 class="pagename">{{allPages[6].pagehead}}</h2>
     <p class="info text-center">({{allPages[6].pagedescription}})</p>
 
-    <!--<h1 class="text-center">{{advantagesData[1].name}}</h1>-->
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
 
-    <div ui-view="advantages">
-        <p class="text-center">А вот тут я расскажу о наших преимуществах</p>
+            <h2 id="advantageName" class="lead_">{{advantagesData[i].name}}</h2>
+            <p id="advantageText" class="text_" ng-bind-html="advantagesData[i].description|nl2br"></p>
 
-        <h1 class="text-center">{{advantagesData[1].name}}</h1>
-        <div class="text-center">
-            <a class="btn btn-primary" ui-sref="home.advantages" ui-sref-active="active">Дальше</a>
+            <div class="text-center">
+                <a class="btn btn-primary" ng-click="goNextAdvantage()">Еще</a>
+            </div>
+
         </div>
 
     </div>
 
 
-</section>
 
+</section>
+<!-- заказчики -->
+<section id="partnersSection" class="dark" >
+    <h2 class="pagename">{{allPages[7].pagehead}}</h2>
+    <p class="info text-center">{{allPages[7].pagedescription}}</p>
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 text-center">
+
+            <h2 id="partnerName" class="lead_">{{partnersData[piter].name}}</h2>
+            <p id="partnerText" class="text_" ng-bind-html="partnersData[piter].description|nl2br"></p>
+
+            <img id="partnerImage" class="partnersImg" src="/assets/img/{{partnersData[piter].image}}" alt="{{partnersData[piter].name}}"/>
+
+            <div class="text-center">
+                <a  class="btn btn-primary" ng-click="goNextPartner()">Еще</a>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+</section>
+<!-- отзывы -->
+<section id="reviewSection" >
+    <h2 class="pagename">{{allPages[8].pagehead}}</h2>
+    <p class="info text-center">{{allPages[8].pagedescription}}</p>
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 text-center">
+
+            <p id="reviewText" class="text_" ng-bind-html="reviewData[riter].text|nl2br"></p>
+            <i id="reviewName" class="lead_">{{reviewData[riter].name}}</i>
+            <!--<img id="partnerImage" class="partnersImg" src="/assets/img/{{reviewData[riter].image}}" alt="{{reviewData[riter].name}}"/>-->
+
+            <div class="text-center">
+                <a  class="btn btn-primary" ng-click="goNextReview()">Еще</a>
+            </div>
+        </div>
+    </div>
+
+</section>
+<section id="orderSection" class="dark">
+    <h2 class="pagename">{{allPages[9].pagehead}}</h2>
+    <p class="info text-center">{{allPages[9].pagedescription}}</p>
+
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 text-center">
+
+
+            <form name="orderForm" ng-submit="newOrder(order)">
+                <div class="well">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="work_date">Дата уборки</label>
+                                <input id="work_date" name="work_date" type="text" class="form-control" ng-model="order.work_date" required />
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <label for="work_type">Вид уборки</label>
+                                <input id="work_type" name="work_type" type="text" class="form-control" ng-model="order.work_type" required />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-8">
+                            <div class="form-group">
+                                <label for="workplace">Помещение</label>
+                                <select id="workplace" name="workplace"  ng-model="order.workplace">
+                                    <option value="flat">квартира</option>
+                                    <option value="home">коттедж</option>
+                                    <option value="other">другое</option>
+                                </select>
+                                <!--<input id="workplace" name="workplace" type="text" class="form-control" ng-model="order.workplace" required />-->
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <label for="area">Площадь (м<sup>2</sup>)</label>
+                                <input id="area" name="area" type="text" class="form-control" ng-model="order.area"  />
+                            </div>
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <label for="address">Местоположение</label>
+                                <input id="address" name="address" type="text" class="form-control" ng-model="order.address" required />
+                            </div>
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <label for="comment">Комментарий</label>
+                                <input id="comment" name="comment" type="text" class="form-control" ng-model="order.comment" required />
+                            </div>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary ">отправить заказ</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+</section>
