--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -129,7 +129,7 @@
         <div class="col-sm-8 col-sm-offset-2 text-center">
 
 
-            <form name="orderForm" ng-submit="newOrder(order)">
+            <form name="orderForm"  ng-submit="newOrder(order)">
                 <div class="well">
                     <div class="row">
                         <div class="col-sm-6">
@@ -160,7 +160,7 @@
                         <div class="col-sm-4">
                             <div class="form-group">
                                 <label for="area">Площадь (м<sup>2</sup>)</label>
-                                <input id="area" name="area" type="text" class="form-control" ng-model="order.area"  />
+                                <input id="area" name="area" type="number" class="form-control" ng-model="order.area"  />
                             </div>
                         </div>
                         <div class="col-sm-12">
