--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -3,12 +3,49 @@ blue #4ea6d3
 yellow #FFD155
 red #FF7B55
 
+back #f9f8f6
+grey #54575a
+grey small  rgba(18,18,18,0.5)
+black small #121212
+yellow #ffb21a  hover #faa600
+
+black exper #757a80
 
 */
+
+@font-face {
+    font-family: "HelveticaLight";
+    src: url("../fonts/HelveticaLight/HelveticaLight.eot");
+    src: url("../fonts/HelveticaLight/HelveticaLight.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/HelveticaLight/HelveticaLight.woff") format("woff"),
+    url("../fonts/HelveticaLight/HelveticaLight.ttf") format("truetype");
+    font-style: normal;
+    font-weight: bold;
+}
+@font-face {
+    font-family: "HelveticaThin";
+    src: url("../fonts/HelveticaThin/HelveticaThin.eot");
+    src: url("../fonts/HelveticaThin/HelveticaThin.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/HelveticaThin/HelveticaThin.woff") format("woff"),
+    url("../fonts/HelveticaThin/HelveticaThin.ttf") format("truetype");
+    font-style: normal;
+    font-weight: bold;
+}
+@font-face {
+    font-family: "HelveticaRegular";
+    src: url("../fonts/HelveticaRegular/HelveticaRegular.eot");
+    src: url("../fonts/HelveticaRegular/HelveticaRegular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/HelveticaRegular/HelveticaRegular.woff") format("woff"),
+    url("../fonts/HelveticaRegular/HelveticaRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: bold;
+}
 body {
     background-color: #fff;
+    /*background-color: #f9f8f6;*/
     font-size:16px;
     /*background-color: #eee;*/
+    font-family: "HelveticaRegular",Helvetica,Arial,sans-serif;
 }
 
 .container {
@@ -22,6 +59,25 @@ body {
 }
 section {
     padding: 10px 0;
+}
+/* позиционирование */
+.mt10{
+    margin-top: 10px;
+}
+.mt20{
+    margin-top: 20px;
+}
+.mt30{
+    margin-top: 30px;
+}
+.mt50{
+    margin-top: 50px;
+}
+.mt100{
+    margin-top: 100px;
+}
+.mt150{
+    margin-top: 150px;
 }
 
 h1{
@@ -71,14 +127,6 @@ ul[rn-carousel-transition="hexagon"] {
     overflow: visible;
 }
 
-/* indicators */
-div.rn-carousel-indicator span {
-    cursor: pointer;
-    color: #666;
-}
-div.rn-carousel-indicator span.active {
-    color: white;
-}
 
 /* prev/next controls */
 .rn-carousel-control {
@@ -109,11 +157,15 @@ div.rn-carousel-indicator span.active {
     position: absolute;
     top:100px;
     left:50px;
-    color: #fff;
+    /*color: #fff;*/
+    /*color: #d3d3d3;*/
+    /*color: #54575a;*/
+    /*color: #757a80;*/
+    color: rgba(0,0,0,0.4);
     font-weight:bold;
     font-size:48px;
     line-height:1;
-    text-shadow: 2px 2px 20px  #000;
+    /*text-shadow: 2px 2px 40px  #000;*/
     /*text-shadow: 2px 2px 20px  #fff;*/
 }
 
@@ -139,7 +191,8 @@ div.rn-carousel-indicator span.active {
 }
 div.rn-carousel-indicator span {
     cursor: pointer;
-    color: rgba(0,0,0,0.4);
+    /*color: rgba(0,0,0,0.4);*/
+    color: #ffb21a;
     font-size: 48px;
 }
 div.rn-carousel-indicator span.active {
@@ -182,43 +235,75 @@ div.rn-carousel-indicator span.active {
     padding-left: 9px;
     margin-bottom: 0;
     font-size:10px;
-    color: #4ea6d3;
+    /*color: #4ea6d3;*/
+    color: #757a80;
     /*color: #fff;*/
     background-color: #fff;
 }
 .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
-    color: #4ea6d3;
-    text-transform: uppercase;
+    color: rgba(18,18,18,0.5);
+    /*text-transform: uppercase;*/
+}
+.navbar-nav > li > a:active,
+.navbar-nav > li > a:hover {
+    color: #121212;
+
 }
 .navbar-right {
     float: right !important;
     margin-right: 5px;
 }
+/*#servicesSection .pagename,*/
+/*#advantagesSection .pagename {*/
+    /*background-color: #4ea6d3;*/
+    /*margin-top: -20px;*/
+    /*color: #fff;*/
+    /*padding: 20px;*/
+/*}*/
+
 .uslugi ul li {
     list-style-type:none;
 }
 .uslugi h1 {
-    color:grey;
+    /*color:grey;*/
+    color:rgba(0,0,0,0.2);
+    text-transform: uppercase;
     /*color: #FFD155;*/
     font-size:32px;
     text-align: center;
     position: relative;
-    margin:40px 0px 30px;
+    margin:110px 0px 30px;
+    font-family: HelveticaThin, sans-serif;
 }
 .uslugi .pagedescription {
-    padding: 30px 200px 50px;
+    padding: 10px 0 50px;
 }
 .uslugi .info {
     color: darkgrey;
     /*font-weight:bold;*/
     text-transform: uppercase;
 }
-.btn-primary{
-    background-color: #4ea6d3;
-    border-color: #4ea6d3;
+#advantagesSection .info {
+    color: #d3d3d3;
+    /*font-weight:bold;*/
+    /*text-transform: uppercase;*/
 }
+.btn-primary{
+    /*background-color: #4ea6d3;*/
+    background-color: #ffb21a;
+    /*border-color: #4ea6d3;*/
+    border-color: #ffb21a;
+    border-radius: 50px;
+    font-size: 16px;
+    line-height: 1.4;
+}
+.btn-primary:hover{
+    background-color: #faa600;
+    border-color: #ffb21a;
+}
+
 a {
     color: #4ea6d3;
 }
@@ -258,13 +343,13 @@ section {
 .defaultBottomImage{
     position: relative;
     margin-top:50px;
-    width: 40%;
-    left:30%;
+    width: 30%;
+    left:35%;
     opacity:0.5;
     /*top:0px;*/
 }
 #servicesSection .sideMenu {
-    top:110px;
+    top:90px;
     text-transform: uppercase;
     text-align: right;
     position: absolute;
@@ -308,7 +393,8 @@ section {
     font-weight:bold;
     font-size:48px;
     line-height:1;
-    text-shadow: 2px 2px 20px  #000;
+    font-family: HelveticaThin, sans-serif;
+    /*text-shadow: 2px 2px 20px  #000;*/
     /*text-shadow: 2px 2px 20px  #fff;*/
 }
 
@@ -320,7 +406,7 @@ section {
     /*font-weight:bold;*/
     font-size:18px;
     line-height: 1.2;
-    text-shadow: 2px 2px 20px  #000;
+    /*text-shadow: 2px 2px 20px  #000;*/
 
     background-color: rgba(0,0,0,0.2);
     border: none;
@@ -328,7 +414,8 @@ section {
     /*text-shadow: 2px 2px 20px  #fff;*/
 }
 .dark{
-    background-color: #eee;
+    /*background-color: #f6f6f4;*/
+    background-color: #f9f8f6;
 }
 .partnersImg{
     width: 80%;
@@ -417,10 +504,40 @@ select::-ms-expand {
     }
 }
 
-/*select:after {*/
-     /*content:"\e080";*/
-     /*font-family:"Glyphicons Halflings";*/
-     /*position: absolute;*/
-     /*right: 15px;*/
-     /*top: 10px;*/
- /*}*/
+#advantageName {
+    text-transform: uppercase;
+    color: rgba(0,0,0,.4);
+    margin-top: 80px;
+    margin-bottom: 40px;
+    font-family: HelveticaThin, sans-serif;
+    font-size:56px;
+}
+#partnerName {
+    font-family: HelveticaThin, sans-serif;
+}
+.partnerBgrImg{
+    height: 600px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+/*#reviewSection .info {*/
+    /*font-family: HelveticaThin, sans-serif;*/
+    /*font-size:18px;*/
+/*}*/
+#reviewText {
+    margin-top: 130px;
+    font-family:"HelveticaRegular",sans-serif;
+    font-size:18px;
+}
+#reviewName {
+    margin-top: 30px;
+    text-align: right;
+    font-style: italic;
+}
+
+#orderSection .pagename {
+    margin: 30px 0 30px;
+}
+#orderSection .info {
+    margin: 10px 0 20px;
+}
