--- a/client/templates/services.repair.html
+++ b/client/templates/services.repair.html
@@ -3,14 +3,16 @@
 <!--<p>{{pageData.text}}</p>-->
 
 <div class="row">
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary"  ui-sref="home.remont.vhodit" ui-sref-active="active">Что входит в уборку после ремонта</a>
+    <div class="col-sm-12 text-center">
+        <a class="secondlink"  ui-sref="home.remont.vhodit" ui-sref-active="active">Что входит в уборку после ремонта</a>
     </div>
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" href="#">Цены на уборку после ремонта</a>
+    <div class="col-sm-12 text-center mt10">
+        <a class="secondlink" href="#">Цены на уборку после ремонта</a>
     </div>
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" href="#">Заказать уборку после ремонта</a>
+    <div class="col-sm-12 text-center mt50">
+        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать уборку после ремонта</a>
     </div>
 </div>
+
+
 <div ui-view="servicesRepair"><img class="defaultBottomImage" src="/assets/img/repair.png" alt="Уборка после ремонта в Москве цены"></div>
