--- a/client/templates/services.supporting.html
+++ b/client/templates/services.supporting.html
@@ -3,14 +3,14 @@
 <!--<p>{{pageData.text}}</p>-->
 
 <div class="row">
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
+    <div class="col-sm-12  text-center ">
+        <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
     </div>
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" href="#">Цены на поддерживающую уборку</a>
+    <div class="col-sm-12 text-center mt10">
+        <a class="secondlink" href="#">Цены на поддерживающую уборку</a>
     </div>
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" href="#">Заказать поддерживающую уборку</a>
+    <div class="col-sm-12 text-center mt50">
+        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
     </div>
 </div>
 <div ui-view="servicesPovsednevnaya"><img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"></div>
