--- a/client/templates/services.general.html
+++ b/client/templates/services.general.html
@@ -3,14 +3,14 @@
 <!--<p>{{pageData.text}}</p>-->
 
 <div class="row">
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" ui-sref="home.generalnaya.vhodit" ui-sref-active="active">Что входит в генеральную уборку</a>
+    <div class="col-sm-12 text-center">
+        <a class="secondlink" ui-sref="home.generalnaya.vhodit" ui-sref-active="active">Что входит в генеральную уборку</a>
     </div>
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" href="#">Цены на генеральную уборку</a>
+    <div class="col-sm-12 text-center mt10">
+        <a class="secondlink" href="#">Цены на генеральную уборку</a>
     </div>
-    <div class="col-sm-4 text-center">
-        <a class="btn btn-primary" href="#">Заказать генеральную уборку</a>
+    <div class="col-sm-12 text-center mt50">
+        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать генеральную уборку</a>
     </div>
 </div>
 <div ui-view="servicesGeneral"><img class="defaultBottomImage" src="/assets/img/general.png" alt="Генеральная уборка в Москве цены"></div>
