--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -235,15 +235,15 @@ div.rn-carousel-indicator span.active {
     padding-left: 9px;
     margin-bottom: 0;
     font-size:10px;
-    /*color: #4ea6d3;*/
-    color: #757a80;
+    color: #4ea6d3;
+    /*color: #757a80;*/
     /*color: #fff;*/
     background-color: #fff;
 }
 .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
-    color: rgba(18,18,18,0.5);
+    /*color: rgba(18,18,18,0.5);*/
     /*text-transform: uppercase;*/
 }
 .navbar-nav > li > a:active,
