--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -81,7 +81,7 @@
 </section>
 <section id="advantagesSection" >
     <h2 class="pagename">{{allPages[6].pagehead}}</h2>
-    <p class="info text-center">({{allPages[6].pagedescription}})</p>
+    <!--<p class="info text-center">({{allPages[6].pagedescription}})</p>-->
 
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
