--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -90,7 +90,22 @@
             <p id="advantageText" class="text_" ng-bind-html="advantagesData[i].description|nl2br"></p>
 
             <div class="text-center">
-                <a class="btn btn-primary mt50" ng-click="goNextAdvantage()">ещё</a>
+                <a class="btn btn-primary btn_right_arrow mt50" ng-click="goNextAdvantage()"><svg
+                                version="1.1" class="svg_arrow"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                x="0px" y="0px"
+                                width="66px" height="31px"
+                                viewBox="0 0 66 31"
+                                style="enable-background:new 0 0 66 31;"
+                                xml:space="preserve"
+                            >
+<g >
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" x1="3" y1="15.5" x2="63" y2="15.5"/>
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="49.1" y1="30" x2="63.1" y2="16"/>
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="63.1" y1="15" x2="49.1" y2="1"/>
+</g>
+								</svg></a>
             </div>
 
         </div>
@@ -114,7 +129,22 @@
             <p id="partnerText" class="text_" ng-bind-html="partnersData[piter].description|nl2br"></p>
 
             <div class="text-center">
-                <a  class="btn btn-primary mt50" ng-click="goNextPartner()">ещё</a>
+                <a  class="btn btn-primary btn_right_arrow mt50" ng-click="goNextPartner()"><svg
+                                version="1.1" class="svg_arrow"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                x="0px" y="0px"
+                                width="66px" height="31px"
+                                viewBox="0 0 66 31"
+                                style="enable-background:new 0 0 66 31;"
+                                xml:space="preserve"
+                            >
+<g >
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" x1="3" y1="15.5" x2="63" y2="15.5"/>
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="49.1" y1="30" x2="63.1" y2="16"/>
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="63.1" y1="15" x2="49.1" y2="1"/>
+</g>
+								</svg></a>
             </div>
         </div>
     </div>
@@ -147,7 +177,22 @@
             <!--<img id="partnerImage" class="partnersImg" src="/assets/img/{{reviewData[riter].image}}" alt="{{reviewData[riter].name}}"/>-->
 
             <div class="text-center">
-                <a  class="btn btn-primary mt30" ng-click="goNextReview()">ещё</a>
+                <a  class="btn btn-primary btn_right_arrow mt30" ng-click="goNextReview()"><svg
+                                version="1.1" class="svg_arrow"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                x="0px" y="0px"
+                                width="66px" height="31px"
+                                viewBox="0 0 66 31"
+                                style="enable-background:new 0 0 66 31;"
+                                xml:space="preserve"
+                            >
+<g >
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" x1="3" y1="15.5" x2="63" y2="15.5"/>
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="49.1" y1="30" x2="63.1" y2="16"/>
+    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="63.1" y1="15" x2="49.1" y2="1"/>
+</g>
+								</svg></a>
             </div>
         </div>
     </div>
