--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -211,8 +211,8 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label for="comment">Телефон</label>
-                                <input id="comment" name="comment" type="text" class="form-control" ng-model="order.phone" required />
+                                <label for="phone">Телефон</label>
+                                <input id="phone" name="phone" type="text" class="form-control" ng-model="order.phone" required />
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -229,7 +229,7 @@
                                     <datepicker  date-format="EEEE d MMMM h:mm" datepicker-show="{{DPvisibility}}" datepicker-toggle="false">
                                         <input ng-model="order.work_date"  class="form-control"  type="text"/>
                                     </datepicker>
-                                    <!--<input type='text' id="work_date" name="work_date" class="form-control" ng-model="order.work_date" />-->
+
                     <span class="input-group-addon" ng-click="toggleDatePicker()">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
@@ -279,5 +279,4 @@
     </div>
 
 </section>
-<!--<div id="backfilter" class="menufilter backfilterOff"></div>-->
 <div id="backfilter" ng-click="myHideCalendar()" ng-class="backFilter"></div>
