--- a/client/templates/services.general.html
+++ b/client/templates/services.general.html
@@ -7,7 +7,7 @@
         <a class="secondlink" ui-sref="home.generalnaya.vhodit" ui-sref-active="active">Что входит в генеральную уборку</a>
     </div>
     <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" href="#">Цены на генеральную уборку</a>
+        <a class="secondlink" data-ui-sref="home.generalnaya.price">Цены на генеральную уборку</a>
     </div>
     <div class="col-sm-12 text-center mt50">
         <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать генеральную уборку</a>
