--- a/client/templates/services.repair.html
+++ b/client/templates/services.repair.html
@@ -7,7 +7,7 @@
         <a class="secondlink"  ui-sref="home.remont.vhodit" ui-sref-active="active">Что входит в уборку после ремонта</a>
     </div>
     <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" href="#">Цены на уборку после ремонта</a>
+        <a class="secondlink" data-ui-sref="home.remont.price">Цены на уборку после ремонта</a>
     </div>
     <div class="col-sm-12 text-center mt50">
         <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать уборку после ремонта</a>
