--- a/client/templates/services.supporting.html
+++ b/client/templates/services.supporting.html
@@ -7,7 +7,7 @@
         <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
     </div>
     <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" href="#">Цены на поддерживающую уборку</a>
+        <a class="secondlink" data-ui-sref="home.povsednevnaya.price">Цены на поддерживающую уборку</a>
     </div>
     <div class="col-sm-12 text-center mt50">
         <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
