--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -375,6 +375,15 @@ section {
     color: lightgrey;
     margin-right: 10px;
 }
+.priceItems {
+    font-size:16px;
+    margin-bottom: 50px;
+    padding: 0;
+}
+.priceItems i {
+    color: lightgrey;
+    margin-right: 10px;
+}
 #clearSection {
     /*height: 600px;*/
     /*background: #000;*/
@@ -534,7 +543,9 @@ select::-ms-expand {
     text-align: right;
     font-style: italic;
 }
-
+#orderSection {
+    padding: 50px;
+}
 #orderSection .pagename {
     margin: 30px 0 30px;
 }
@@ -549,4 +560,10 @@ select::-ms-expand {
 .btn_right_arrow {
     line-height: 1;
     padding: 4px 7px 1px;
+}
+.pricesInfo {
+    font-family:"HelveticaRegular",sans-serif;
+    font-size: 12px;
+    margin-bottom: 50px;
+    color: grey;
 }
