--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -53,22 +53,22 @@
                 <h1>{{allPages[3].pagehead}}</h1>
                 <p class="pagedescription">{{allPages[3].pagedescription}}</p>
 
-
+                <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена">
 
                 <div class="row">
                     <div class="col-sm-12  text-center ">
                         <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
                     </div>
                     <div class="col-sm-12 text-center mt10">
-                        <a class="secondlink" data-ui-sref="home.povsednevnaya.price">Цены на поддерживающую уборку</a>
+                        <a class="secondlink" ui-sref="home.povsednevnaya.price" ui-sref-active="active">Цены на поддерживающую уборку</a>
 
                     </div>
-                    <div class="col-sm-12 text-center mt50">
-                        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
+                    <div class="col-sm-12 text-center mt20">
+                        <a class="btn btn-primary" ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
                     </div>
                 </div>
-                <!--<img class="defaultImage" src="/assets/img/services.png" alt="Виды уборки"></div>-->
-                <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена">
+
+
         </div>
     </div>
 
