--- a/client/templates/services.general.html
+++ b/client/templates/services.general.html
@@ -2,18 +2,20 @@
 <p class="pagedescription">{{pageData.pagedescription}}</p>
 <!--<p>{{pageData.text}}</p>-->
 
+<div id="servicesGeneralView" ui-view="servicesGeneral"><img class="defaultBottomImage" src="/assets/img/general.png" alt="Генеральная уборка в Москве цены"></div>
+
 <div class="row">
     <div class="col-sm-12 text-center">
         <a class="secondlink" ui-sref="home.generalnaya.vhodit" ui-sref-active="active">Что входит в генеральную уборку</a>
     </div>
     <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" data-ui-sref="home.generalnaya.price">Цены на генеральную уборку</a>
+        <a class="secondlink" ui-sref="home.generalnaya.price" ui-sref-active="active">Цены на генеральную уборку</a>
     </div>
-    <div class="col-sm-12 text-center mt50">
-        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать генеральную уборку</a>
+    <div class="col-sm-12 text-center mt20">
+        <a class="btn btn-primary" ui-sref="home.zakaz">Заказать генеральную уборку</a>
     </div>
 </div>
-<div ui-view="servicesGeneral"><img class="defaultBottomImage" src="/assets/img/general.png" alt="Генеральная уборка в Москве цены"></div>
+
 
 
 
