--- a/client/templates/services.supporting.html
+++ b/client/templates/services.supporting.html
@@ -2,15 +2,17 @@
 <p class="pagedescription">{{pageData.pagedescription}}</p>
 <!--<p>{{pageData.text}}</p>-->
 
+<div id="servicesPovsednevnayaView" ui-view="servicesPovsednevnaya"><img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"></div>
+
 <div class="row">
     <div class="col-sm-12  text-center ">
         <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
     </div>
     <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" data-ui-sref="home.povsednevnaya.price">Цены на поддерживающую уборку</a>
+        <a class="secondlink" ui-sref="home.povsednevnaya.price" ui-sref-active="active">Цены на поддерживающую уборку</a>
     </div>
-    <div class="col-sm-12 text-center mt50">
-        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
+    <div class="col-sm-12 text-center mt20">
+        <a class="btn btn-primary" ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
     </div>
 </div>
-<div ui-view="servicesPovsednevnaya"><img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"></div>
+
