--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -218,8 +218,8 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label for="comment">Имя</label>
-                                <input id="comment" name="comment" type="text" class="form-control" ng-model="order.name" />
+                                <label for="name">Имя</label>
+                                <input id="name" name="name" type="text" class="form-control" ng-model="order.name" />
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -256,7 +256,7 @@
                             <div class="form-group">
                                 <label for="area">Площадь (м<sup>2</sup>)</label>
                                 <select id="area" class="form-control" name="area"  ng-model="order.area" ng-options="y for (x,y) in areaOptions"></select>
-                                <!--<input id="area" name="area" type="number" class="form-control" ng-model="order.area"  />-->
+
                             </div>
                         </div>
                         <div class="col-sm-12">
