--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -42,7 +42,7 @@
     <!--<p class="info text-right">{{allPages[1].pagedescription}}</p>-->
     <!--<p class="text">{{allPages[1].text}}</p>-->
     <ul class="sideMenu">
-        <li><a ui-sref="home.povsednevnaya" ui-sref-active="active">Повседневная уборка</a></li>
+        <li><a ui-sref="home.povsednevnaya" ui-sref-active="active">Поддерживающая уборка</a></li>
         <li><a ui-sref="home.generalnaya" ui-sref-active="active">Генеральная уборка</a></li>
         <li><a ui-sref="home.remont" ui-sref-active="active">Уборка после ремонта</a></li>
     </ul>
